name:                lc-a-h-typed-ru
version:             0.1.0.0
-- synopsis:
-- description:      explicitly-typed lambda calculus; type reconstruction and unification algorithms
homepage:            https://github.com/githubuser/lc-a-h-typed-ru#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                   , src/Lexer.x
                   , src/Parser.y
                   , src/TypeParser.y
executable lc-a-h-typed-ru
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                    ,  mtl
                    ,  transformers
                    ,  text
                    ,  array
                    ,  containers
                    ,  utf8-string
                    ,  directory
  build-tools:         alex
                    ,  happy
  other-modules:       Lexer
                      ,Parser
                      ,Tokens
                      ,TypeInference
                      ,TypeParser
                      ,Renaming
                      ,Errors
                      ,ParsingInterface